# algorithms-lab5

./: CMakeLists.txt
src/: Front.hpp  GameState.hpp  Minmax.hpp  main.cpp
